data/derived/comb/progs/unify/prog5544.ml.out
Characters 30-49:
  let fixpoint (f,b) = wwhile ( (f, not (f x = b )), b);;
                                ^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
